# Scaler-hackathon

./: Dockerfile  README.md  app.py  env2.py  environment.py  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml  server.py  tasks.py  test_env.py  validate-submission.sh
server/: app.py  environment.py  models.py
